# wasmos

./: Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
src/: App.css  App.tsx  main.tsx
src/components/: InputBar.tsx
wasmos-rs/: Cargo.toml
wasmos-rs/src/: coordinate.rs  lib.rs
