[package]
name = "wasmos"
version = "0.1.0"
authors = ["Harry Parkes <harrydparkes@proton.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
evalexpr = "12.0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = ["console"] }
# getrandom = { version = "0.3.1", features = ["js-sys"] }
rand = "0.9.0"
nalgebra = "0.33.2"
# rapier2d-f64 = { version = "0.23.1", features = ["wasm-bindgen"] }
rapier2d-f64 = "0.23.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lints.clippy]
pedantic = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
style = "warn"
must_use_candidate = { level = "allow", priority = 10 }
